# autoclicker

./: .gitignore  CMakeLists.txt  README.md  ac_config.json  autoclicker.cpp  versions.txt
.claude/: settings.local.json
.github/workflows/: build.yml  cmake-multi-platform.yml
Clicker/: Clicker.cpp  Clicker.h
SDK/: Lunar.h  Minecraft.cpp  MultiPlayerGameMode.cpp  MultiPlayerGameMode.h  Screen.cpp  Screen.h
data/: banned.json
dll/: CMakeLists.txt  Config.h  Config.h.in  Log.h  Logger.h  Platform.h  Settings.cpp  Settings.h  Teardown.cpp  Teardown.h  autoclicker.cpp  main.cpp
dll/Clicker/: Clicker.cpp  Clicker.h
dll/SDK/: AABB.cpp  AABB.h  BlockHitResult.cpp  BlockHitResult.h  BlockPos.cpp  BlockPos.h  BlockState.cpp  BlockState.h  Camera.cpp  Camera.h  Capabilities.h  ChatComponent.cpp  ChatComponent.h  Component.cpp  Component.h  DeltaTracker.cpp  DeltaTracker.h  Entity.cpp  Entity.h  EntityHitResult.cpp  EntityHitResult.h  GameRenderer.cpp  GameRenderer.h  Gui.cpp  Gui.h  HitResult.cpp  HitResult.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemStack.cpp  ItemStack.h  JvmtiAgent.cpp  JvmtiAgent.h  Level.cpp  Level.h  LivingEntity.cpp  LivingEntity.h  Lunar.cpp  (+13 more)
dll/SDK/1.21.11/: BlockState.cpp  Component.cpp  Entity.cpp  EntityHitResult.cpp  Level.cpp  Minecraft.cpp  MultiPlayerGameMode.cpp  Player.cpp  View.cpp
dll/SDK/1.26/: View.cpp
dll/SDK/1.8.9/: BlockState.cpp  Component.cpp  Entity.cpp  EntityHitResult.cpp  HitResult.cpp  Level.cpp  LivingEntity.cpp  Minecraft.cpp  MultiPlayerGameMode.cpp  Player.cpp  View.cpp
dll/SDK/legacy/: Entity.cpp  ItemStack.cpp  View.cpp
dll/SDK/modern/: HitResult.cpp  ItemStack.cpp  LivingEntity.cpp
dll/cmake/: RevisionHeader.cmake
dll/config/: Settings.cpp  Settings.h
dll/logger/: Logger.cpp  Logger.h
dll/modules/: ModuleCommon.h
dll/modules/aim/: AimAssistModule.cpp  AimAssistModule.h
dll/modules/autoability/: AutoAbilityModule.cpp  AutoAbilityModule.h
dll/modules/autoblock/: AutoblockModule.cpp  AutoblockModule.h
dll/modules/autoclicker/: AutoclickerModule.cpp  AutoclickerModule.h  Clicker.cpp  Clicker.h
dll/modules/esp/: EspModule.cpp  EspModule.h
dll/modules/friends/: FriendsModule.cpp  FriendsModule.h
dll/modules/leap/: LeapModule.cpp  LeapModule.h
dll/modules/llm/: LLMClient.cpp  LLMClient.h  LLMModule.cpp  LLMModule.h
dll/modules/macros/: MacrosModule.cpp  MacrosModule.h
dll/modules/scaffold/: ScaffoldModule.cpp  ScaffoldModule.h
dll/modules/sprintreset/: SprintResetModule.cpp  SprintResetModule.h
dll/network/: Network.cpp  Network.h
dll/overlay/: Notifications.cpp  Notifications.h  Overlay.cpp  Overlay.h  OverlayWidgets.cpp  OverlayWidgets.h  Theme.h
dll/overlay/tabs/: AimassistTab.cpp  AutoclickerTab.cpp  EspTab.cpp  FriendsTab.cpp  MacrosTab.cpp  MiscTab.cpp  SettingsTab.cpp  Tabs.h
dll/teardown/: Teardown.cpp  Teardown.h
gui/: CMakeLists.txt  main.cpp
injector/: CMakeLists.txt  main.cpp
mappings/: 1.26.x+.json  fabric_1.21.11.json  lunar_1.8.9.json  mojang_1.21.4.json
